// Copyright 2024-2025 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1;

import "accrescent/directory/v1/app_listing.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1";

// Response to requesting an app listing.
message GetAppListingResponse {
  // The listing provided by the API.
  AppListing listing = 1;
}
