// Copyright 2024 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1beta1;

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1beta1";

// View for specifying which fields to include in an app listing.
enum AppListingView {
  // The unspecified value.
  APP_LISTING_VIEW_UNSPECIFIED = 0;

  // Include the app listing's ID, language, name, short description, and icon,
  // excluding all other fields. This is the default.
  //
  // Compatibility information will still be included in the response if device
  // attributes are provided regardless of whether this view is set.
  APP_LISTING_VIEW_BASIC = 1;

  // Include all available app listing fields. Note that omitting device
  // attributes in the request may result in missing fields regardless of
  // whether this view is set.
  APP_LISTING_VIEW_FULL = 2;
}
