// Copyright 2024 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1beta1;

import "accrescent/directory/v1beta1/app_download_info.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1beta1";

// Response to requesting an app's download info
message GetAppDownloadInfoResponse {
  // The app download info provided by the API. If not present, indicates that
  // the app version provided is the latest version and that there is no
  // additional download info needed.
  AppDownloadInfo app_download_info = 1;
}
