// Copyright 2025 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1beta1;

import "accrescent/directory/v1beta1/device_attributes.proto";
import "accrescent/directory/v1beta1/release_channel.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1beta1";

// Request defining parameters for retrieving an app's available update info.
message GetUpdateInfoRequest {
  // The application ID to check for updates. Required.
  optional string app_id = 1;

  // The base version code of the app to check for updates from, i.e., the
  // currently installed version. Required.
  optional uint32 base_version_code = 2;

  // The current device's hardware and OS attributes used to determine app
  // compatibility. If unspecified, compatibility information will not be
  // included in the response.
  DeviceAttributes device_attributes = 3;

  // The release channel to retrieve update information for. If unspecified,
  // defaults to the stable channel.
  ReleaseChannel release_channel = 4;
}
